// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default component 1`] = `
<div
  className="scroll-view"
/>
`;

exports[`should render with props 1`] = `
<div
  className="scroll-view"
>
  child content
</div>
`;
